# LLM_HALLUCINATION_RL

./: .gitignore  Dockerfile  LICENSE  MVP_SPEC.md  README.md  agent_policy.json  baseline.py  dashboard.py  implementation_plan.md  inference.py  main.py  memory.md  openenv.yaml  pyproject.toml  requirements.txt  sanity_check.py
data/: seed_dataset.jsonl
server/: app.py
src/: client.py  dataset.py  env.py  features.py  grader.py  models.py
src/agents/: rule_based_agent.py
src/eval/: evaluate.py
src/train/: train_ppo.py
tests/: test_env_step.py  test_features.py  test_grader.py
ui/: index.html
