[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silent-failure-detector"
version = "0.1.0"
description = "Deterministic OpenEnv-style environment for detecting confident wrong AI outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "pandas",
    "pytest",
    "openenv-core>=0.2.1",
    "openai",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"
